[package]
name = "rf95modem"
version = "0.1.0"
authors = ["Lars Baumgaertner <baumgaertner@cs.tu-darmstadt.de>"]
edition = "2018"
repository = "https://github.com/gh0st42/rf95modem-rs"
license = "MIT"
description = "Rust wrapper to access rf95 LoRa modem firmware (https://github.com/gh0st42/rf95modem)"
keywords = ["lora", "serial", "rf95"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cursive = "0.12.0"
lazy_static = "1.4"

[dependencies]
serialport = "3.3.0"
